--- a/README
+++ b/README
@@ -17,7 +17,7 @@ These DACs communicate via a 2-wire I2C-compatible serial interface. The LTC2633
 ## Contact
 Connect us here:
 
- [Tamojit](https://www.linkedin.com/in/tamojit-saha/)<br>
+ [Tamojit](https://www.linkedin.com/in/tamojit-saha/)
  [Sandeepan](https://www.linkedin.com/in/sandeepan-sengupta/)
 
 or file an issue here: https://github.com/TamojitSaha/LTC2633/issues/new/.
